# PasswordManagerApi

./: Cargo.toml  Rocket.toml
migrations/2023-09-16-230510_create_websites/: up.sql
migrations/2023-09-18-074104_create_accounts/: up.sql
migrations/2023-09-18-074155_create_passwords/: up.sql
migrations/2023-09-18-074451_create_logins/: up.sql
src/: controller.rs  database.rs  main.rs  models.rs  schema.rs
src/controller/: login.rs  password.rs  website.rs
src/controller/password/: utils.rs
src/models/: accounts.rs  logins.rs  passwords.rs  websites.rs
