[package]
name = "passwd_man_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#aes-gcm = { version = "0.10.2", features = ["heapless"] }
# base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.1", features = ["mysql", "chrono"] }
dotenvy = "0.15.7"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.9.5"
# rocket = "0.4.11"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = "0.5.2"
rust-crypto = "0.2.36"
sha256 = "1.4.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
# yansi = "0.5.1"
